Actualizada la plantilla.

--- a/PlantillaTFG.cls
+++ b/PlantillaTFG.cls
@@ -1,11 +1,13 @@
+% Template made by hola@josecarlos.me
+
 % Información sobre la versión.
 \ProvidesClass{PlantillaTFG}[05/06/2015 v1 PlantillaTFG]
 
 % Modo book
 \ifx\pdfoutput\undefined
-	\LoadClass[dvips, a4paper]{book}
+	\LoadClass[dvips, a4paper, 11pt]{book}
 \else
-	\LoadClass[pdftex, a4paper]{book}
+	\LoadClass[pdftex, a4paper, 11pt]{book}
 \fi
 
 % Normativa
@@ -32,6 +34,7 @@
 \setlength{\marginparwidth}{3cm}
 \setlength{\footskip}{2.36cm}
 \setlength{\parindent}{0cm}
+\setlength{\baselineskip}{1.5cm}
 
 % Pruebas
 \usepackage{lipsum}
@@ -48,25 +51,132 @@
 \usepackage{graphicx}
 \graphicspath{{graphics/}}
 
+% Citas
+\usepackage{cite}
+
+
 % Título
 \newenvironment{alwayssingle}{%
 	\@restonecolfalse\if@twocolumn\@restonecoltrue\onecolumn
 	\else\newpage\fi}
 {\if@restonecol\twocolumn\else\newpage\fi}
 
+% Universidad
+\def\university#1{\gdef\@university{#1}}
+\university{}
+
+% Degree
+\def\degree#1{\gdef\@degree{#1}}
+\degree{}
+
+% Logo
+\def\logo#1{\gdef\@logo{#1}}
+\logo{university_logo}
+
+% Type
+\def\type#1{\gdef\@type{#1}}
+\type{}
+
+% Type
+\def\subdate#1{\gdef\@subdate{#1}}
+\subdate{}
+
+% Advisor
+\def\advisor#1{\gdef\@advisor{#1}}
+\advisor{}
+
+% Signature
+\def\signaturecandidate#1{\gdef\@signaturecandidate{#1}}
+\signaturecandidate{}
+
+% Advisor 1
+\def\signatureadvisor#1{\gdef\@signatureadvisor{#1}}
+\signatureadvisor{}
+
+% Advisor 2
+\def\signatureadvisortwo#1{\gdef\@signatureadvisortwo{#1}}
+\signatureadvisortwo{}
+
+% City
+\def\city#1{\gdef\@city{#1}}
+\city{}
+
+\def\advisortwo#1{\gdef\@advisortwo{#1}}
+
+\usepackage{datetime}
+
 \renewenvironment{maketitle}{
 	\pagestyle{empty}
 	
 	\begin{alwayssingle}
 		\begin{center}
-			{\includegraphics[width=3.5cm]{university_logo}}
-			{\vspace*{0.5ex}}
-			{\huge \vspace*{15mm}{\par} \@title\vspace*{15mm}\par} 
+			{\huge\textsc{\textbf{\@university}}\vspace*{4mm}\par}
+			{\large\textsc{\@degree}\vspace*{4mm}\par}
+			{\includegraphics[width=3.5cm]{\@logo}}
+			{\vspace*{2mm}\par\huge\@title\vspace*{4mm}\par} 
+			{\rule{\textwidth}{.01cm}}
+			{\vspace*{1mm}\par\textsc{\@type}\vspace*{1mm}\par}
+			{\textsc{\@subdate}\vspace*{2mm}\par}
+			{\rule{\textwidth}{.01cm}}
+			{\vspace*{2mm}\par\textsc{\Large\@author}\vspace*{1mm}\par}
+			{
+				\begin{center}
+					\ifx\@advisortwo\undefined
+						\large{\@advisor}
+					\else
+						\large{\@advisor} \hfil \large{\@advisortwo}
+					\fi
+				\end{center}
+			}
 		\end{center}
 	\end{alwayssingle}
-	% Incluimos el logo
-	%
-	
+	\cleardoublepage
+		\begin{alwayssingle}
+		\begin{center}
+			{\huge\textsc{\textbf{\@university}}\vspace*{4mm}\par}
+			{\large\textsc{\@degree}\vspace*{4mm}\par}
+			{\includegraphics[width=3.5cm]{\@logo}}
+			{\vspace*{2mm}\par\huge\@title\vspace*{4mm}\par} 
+			{\rule{\textwidth}{.01cm}}
+			{\vspace*{1mm}\par\textsc{\@type}\vspace*{1mm}\par}
+			{\textsc{\@subdate}\vspace*{2mm}\par}
+			{\rule{\textwidth}{.01cm}}
+			{\vspace*{2mm}\par\textsc{\Large\@author}\vspace*{1mm}\par}
+			{
+				\begin{center}
+					\ifx\@advisortwo\undefined
+					\large{\@advisor}
+					\else
+					\large{\@advisor} \hfil \large{\@advisortwo}
+					\fi
+				\end{center}
+			}
+			{\rule{\textwidth}{.01cm}}
+			{
+				\ifx\@advisortwo\undefined
+					\@signaturecandidate \hfil \@signatureadvisor
+				\else
+					\begin{center}
+						\begin{minipage}[b]{0.33333\textwidth}
+							\raggedright
+							\@signaturecandidate
+						\end{minipage}%
+						\begin{minipage}[b]{0.33333\textwidth}
+							\centering
+							\@signatureadvisor
+						\end{minipage}%
+						\begin{minipage}[b]{0.33333\textwidth}
+							\raggedleft
+							\@signatureadvisortwo
+						\end{minipage}
+					\end{center} 
+				\fi
+				
+			\par}
+			\vspace*{15ex}
+			{\@city, \monthname ~ \the\year}
+		\end{center}
+	\end{alwayssingle}
 }{
 	\newpage
 }
@@ -87,44 +197,9 @@
 	\vspace{\stretch{2}}\null\end{flushright}
 }
 
-% Fuentes
-\usepackage[math]{kurier}
-\usepackage[sfdefault]{roboto}
-\usepackage[T1]{fontenc}
-
 % Capitulos
 \usepackage[Glenn]{fncychap}
 \ChTitleVar{\bfseries\Large\sf}
 
 % Teoremas, Definiciones, Lemas, Corolarios...
-\usepackage[framemethod=TikZ]{mdframed}
-
-\newenvironment{cajabonita}[5]{
-	\refstepcounter{#1}
-	
-	\ifstrempty{#5}%
-	% if condition (without title)
-	{\mdfsetup{%
-			frametitle={%
-				\tikz[baseline=(current bounding box.east),outer sep=0pt]
-				\node[anchor=east,rectangle,fill=#3]
-				{\strut \textcolor{#4}{#2~\arabic{#1}}};}
-		}%
-		% else condition (with title)
-	}{\mdfsetup{%
-			frametitle={%
-				\tikz[baseline=(current bounding box.east),outer sep=0pt]
-				\node[anchor=east,rectangle,fill=#3]
-				{\strut\textcolor{#4}{#2~\arabic{#1}:~#5}};}%
-		}%
-	}%
-	% Both conditions
-	\mdfsetup{%
-		innertopmargin=10pt,linecolor=#3,%
-		linewidth=2pt,topline=true,%
-		frametitleaboveskip=\dimexpr-\ht\strutbox\relax%
-	}
-	\begin{mdframed}[]\relax
-}{
-	\end{mdframed}
-}
+\usepackage{amsthm}
