Added an example.

--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,9 @@
 	\pagestyle{fancy}
 	\chapter{Demo}
 	Aquí un ejemplo de cita \cite{miprimerabiblio}
+	\begin{teorema}[Teorema de Pitágoras]
+		$$x^2+y^2=z^2$$
+	\end{teorema}
 	\lipsum[1-10]
 	
 	\bibliographystyle{ieeetr}
